# payroll-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-016a10db02749c516ab9e52db603f46868701ebd327e1dedadc8efa445a3c8c2.json  query-01a75cb368a7f250d72f8a2555dcd3edd8941a6e8d38b906bbaafd3ca9f5d3c8.json  query-0341faed3b3ca0b6496ca63eefa0faa29477a6b4ee34e85e21eb537d51344751.json  query-035a63cd69850b1d8b064e87c4343e35fbcb732a4d9d8e4101ac2ce75fce1c57.json  query-099c3b447c9406b5fb901f1402c79c393870f8c4050666adea63298a00423851.json  query-09c500a5d2a6986b9c672193d8058ce0b45af2c512631bc89a3ecf7cffb3d68d.json  query-0b1a6035da598a58eda4129fd114ba42d4cc52b29185b1364e743e4c7731ba75.json  query-0b28aac0e26e00e4c5636864b1af58c454f91a45c2340bf5dfa8bdc9be37f8a0.json  query-0bb1f2d9c4d451aa2596032d5e77b8890a2772ab83a9abd7e5703f55d8e8853e.json  query-0bc9b6754836293f771520156b60ff20b12f4f0360b07a6932c8d15c8c9982f3.json  query-0be6da495b4f1ea147f34148701ded9789c5985bd9046ea32bda05e2cab78941.json  query-0cd4aa20c970629a1d02cebe8519c58a134c68804229e18972534627a98d7191.json  query-0d88e8e4df3057aa49fe601cb34d677a21f8962fe52d255b142055269b5918a5.json  query-0da2816058e9590c721c8db52ceb34e6217957b4bc307afee3836071b35bead9.json  query-0de8e36fcaf32f021e5d5374c5e929c5d042b855a979775e1b4cf0480a2231c0.json  query-0f13b361dac29272c87a3f8eb64a4eaa82be34b058070b8f55ac224584987391.json  query-0fd3a3a4ae9eac09e0907af542e0e3fa7c50805a3e4287747ceee2050b9deee1.json  query-1024f6e46c30453049c0b861ebdbdd6526029170b84ee63cfcf3061349234184.json  (+432 more)
backend/src/: lib.rs  main.rs
(+437 files in other folders)
